--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#products">Products</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="gallery.html">Galley</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
