--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Photo Gallery</title>
+    <title>Shreenathji</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
             <button class="login-btn" id="loginBtn">Admin Login</button>
             <div class="admin-badge" id="adminBadge" style="display: none;">Admin Mode</div>
             <h1>My Photo Gallery</h1>
-            <p>Share your moments, create memories</p>
+            <p>See the Moments, Cherish the Memories.</p>
         </div>
 
         <div class="upload-section hidden" id="uploadSection">
