--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="nav-content">
-            <a href="#" class="logo">Shreenathji Gir Gaushala</a>
+            <a href="index.html" class="logo">Shreenathji Gir Gaushala</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -21,7 +21,7 @@
     <div class="gallery-container">
         <div class="header">
             <button class="login-btn" id="loginBtn">Admin Login</button>
-            <div class="admin-badge" id="adminBadge" style="display: none;">Admin Mode</div>
+            <!-- <div class="admin-badge" id="adminBadge" style="display: none;"></div> -->
             <h1>My Photo Gallery</h1>
             <p>See the Moments, Cherish the Memories.</p>
         </div>
