--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
     <div class="gallery-container">
         <div class="header">
             <button class="login-btn" id="loginBtn">Admin Login</button>
-            <!-- <div class="admin-badge" id="adminBadge" style="display: none;"></div> -->
+            <div class="admin-badge" id="adminBadge" style="display: none;"></div>
             <h1>My Photo Gallery</h1>
             <p>See the Moments, Cherish the Memories.</p>
         </div>
