--- a/gallery.html
+++ b/gallery.html
@@ -60,8 +60,12 @@
     </div>
 
     <script>
-        let photos = [];
-        let photoIdCounter = 1;
+        let photos = [
+            { id: 1, src: 'images/a.jpg', name: 'Gir Cow 1', date: '2025-07-17', size: '150 KB' },
+            { id: 2, src: 'images/b.jpg', name: 'Gir Cow 2', date: '2025-07-16', size: '200 KB' },
+            { id: 3, src: 'images/c.jpg', name: 'Gir Cow 3', date: '2025-07-15', size: '180 KB' }
+        ];
+        let photoIdCounter = 4;
         let isAdmin = false;
 
         // Admin credentials (in real app, this would be handled server-side)
@@ -254,7 +258,7 @@
                     <img src="${photo.src}" alt="Photo" onclick="openModal('${photo.src}')">
                     <div class="photo-info">
                         <div class="photo-date">Uploaded: ${photo.date}</div>
-                        ${isAdmin ? `<button class="delete-btn" onclick="deletePhoto(${photo.id})">Delete</button>` : ''}
+                        ${isAdmin && photo.id > 3 ? `<button class="delete-btn" onclick="deletePhoto(${photo.id})">Delete</button>` : ''}
                     </div>
                 </div>
             `).join('');
